@@ -42,6 +42,19 @@ import java.util.Map;
 public final class LuaJavaAPI
 {
 
+  private static class MethodType {
+	  public Object[] args;
+	  public Class[] types;
+	  
+	  public MethodType(Object[] args, Class[] types) {
+		  this.args = args;
+		  this.types = types;
+	  }
+  }
+  
+  static Map<Class,Method[]> classCache = new HashMap<Class,Method[]>();
+  static Map<Method,MethodType> methodCache = new HashMap<Method,MethodType>();
+
   private LuaJavaAPI()
   {
   }
@@ -62,7 +75,7 @@ public final class LuaJavaAPI
    * @param methodName the name of the method
    * @return number of returned objects
    */
-  public static int objectIndex(int luaState, Object obj, String methodName)
+  public static int objectIndex(int luaState, int doCall, Object obj, String methodName)
       throws LuaException
   {
     LuaState L = LuaStateFactory.getExistingState(luaState);
@@ -73,6 +86,7 @@ public final class LuaJavaAPI
       Object[] objs = new Object[top - 1];
       Method method = null;
       Class clazz;
+      Object ret; 
 
       if (obj instanceof Class)
       {
@@ -98,44 +112,67 @@ public final class LuaJavaAPI
         throwLuaException(L,"No such method: "+methodName);
       }
 
-      Object ret = null;
-      try
+      if (doCall == 1) {
+    	  ret = callMethod(L,method,obj,objs);
+	      // Void function returns null
+	      if (ret == null) {
+	        return 0;
+	      }
+      } else {
+    	  ret = method;
+    	  methodCache.put(method, new MethodType(objs,method.getParameterTypes()));
+      }
+      // push result
+      L.pushObjectValue(ret);
+      return 1;
+    }
+  }
+  
+  public static int callJavaMethod(int luaState, Object obj, Object _method)
+	      throws LuaException
       {
-        if(Modifier.isPublic(method.getModifiers()))
+    LuaState L = LuaStateFactory.getExistingState(luaState);
+
+    synchronized (L)
         {
-          method.setAccessible(true);
+	    Method method = (Method)_method;
+	    MethodType mt = methodCache.get(method);
+	    Object[] objs = mt.args;
+	    Class[] types = mt.types; 
+	    for (int i = 0; i < types.length; i++) {
+	    	objs[i] = compareTypes(L, types[i], i+2);
+	    }
+	    Object ret = callMethod(L,method,obj,objs);
+	    if (ret == null) // void method doesn't return value
+	    	return 0; 
+	    L.pushObjectValue(ret);
+    	return 1;
+    }
         }
         
-        //if (obj instanceof Class)
-        if (Modifier.isStatic(method.getModifiers()))
+  static Object callMethod(LuaState L,Method method, Object obj, Object[] objs) throws LuaException
         {
-          ret = method.invoke(null, objs);
+      Object ret = null;
+      try 
+        {
+    	int mods = method.getModifiers();
+        if(Modifier.isPublic(mods))  {
+          method.setAccessible(true);
         }
-        else
-        {
+        if (Modifier.isStatic(mods))  {
+          ret = method.invoke(null, objs);
+        } else {
           ret = method.invoke(obj, objs);
         }
       }
       catch (InvocationTargetException e) {
     	  Throwable cause = e.getCause();
-    	  throwLuaException(L,methodName+" "+(cause!=null?cause.getMessage():"unknown error"));
+    	  throwLuaException(L,method.getName()+" "+(cause!=null?cause.getMessage():"unknown error"));
       }
-      catch (Exception e)
-      {
+      catch (Exception e) {
         throwLuaException(L,e.getMessage());
       }
-
-      // Void function returns null
-      if (ret == null)
-      {
-        return 0;
-      }
-
-      // push result
-      L.pushObjectValue(ret);
-
-      return 1;
-    }
+      return ret;	  
   }
 
   /**
@@ -151,14 +188,11 @@ public final class LuaJavaAPI
     LuaState L = LuaStateFactory.getExistingState(luaState);
 
     synchronized (L) {
-      if (!obj.getClass().isArray())
-        throwLuaException(L,"Object indexed is not an array.");
-
-      if (Array.getLength(obj) < index)
-        throwLuaException(L,"Index out of bounds.");
-	  
+      try {
       L.pushObjectValue(Array.get(obj, index - 1));
-	  
+      } catch (Exception e) { 
+    	  throwLuaException(L,e.getMessage());  
+      }
       return 1;
     }
   }
@@ -595,6 +629,7 @@ public final class LuaJavaAPI
     }
   }
 
+  @SuppressWarnings("unchecked")
   private static Object compareTypes(LuaState L, Class parameter, int idx)
     throws LuaException
   {
@@ -614,7 +649,7 @@ public final class LuaJavaAPI
       {
         okType = false;
       }
-      obj = new Boolean(L.toBoolean(idx));
+      obj = Boolean.valueOf(L.toBoolean(idx));
     }
     else if (L.type(idx) == LuaState.LUA_TSTRING.intValue())
     {
@@ -651,9 +686,7 @@ public final class LuaJavaAPI
     }
     else if (L.type(idx) == LuaState.LUA_TNUMBER.intValue())
     {
-      Double db = new Double(L.toNumber(idx));
-      
-      obj = LuaState.convertLuaNumber(db, parameter);
+      obj = LuaState.convertLuaNumber(L.toNumber(idx), parameter);
       if (obj == null)
       {
         okType = false;
@@ -702,7 +735,7 @@ public final class LuaJavaAPI
     return obj;
   }
 
-  static Map<Class,Method[]> classCache = new HashMap<Class,Method[]>();
+  
 
   private static Method getMethod(LuaState L, Class clazz, String methodName, Object[] retObjs, int top)
   {
@@ -718,11 +751,12 @@ public final class LuaJavaAPI
      // gets method and arguments
      for (int i = 0; i < methods.length; i++)
      {
-       if (! methods[i].getName().equals(methodName)) {
+       Method m = methods[i];
+       if (! m.getName().equals(methodName)) {
          continue;
        }
 
-       Class[] parameters = methods[i].getParameterTypes();
+       Class[] parameters = m.getParameterTypes();
        if (parameters.length != top - 1)
          continue;
 
